# vscode-clangd-scaffold

./: .clangd.android  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
scripts/: check-if-signed.sh  ios-sign-framework.sh  list-ios-development-teams.sh
